# nwb2bids

./: .autorc  .buildinfo  .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .update-readme-help.py  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  genindex.html  index.html  objects.inv  pyproject.toml  searchindex.js  setup.cfg
.claude/: CLAUDE.md
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: bids_models.doctree  index.doctree  testing.doctree
.github/: .codecov.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: auto-create-labels.yml  auto-release-deploy.yml  auto-release.yml  auto_release.yml  build_and_upload_docker_image_dev.yml  build_and_upload_docker_image_latest.yml  custom_dispatch_tests.yml  dailies.yml  daily_doc_link_check.yml  daily_remote.yml  daily_remote_tests.yml  daily_tests.yml  deploy_remote_tests.yml  deploy_tests.yml  deploy_tests_on_pull_request.yml  docs-cleanup.yml  docs.yml  notify_on_major_version_label.yml  publish_to_pypi_on_github_release.yml  readme-updated.yml  require_labels_on_pull_request.yml  require_pr_labels.yml  test.yml  test_dev_container.yml  test_docker_build.yml  testing.yml
_modules/: index.html
_modules/nwb2bids/bids_models/: _bids_session_metadata.html  _channels.html
_modules/nwb2bids/testing/: _assert_subdirectory_structure.html
_sources/: index.rst.txt
api/: bids_models.html  testing.html
containers/: Dockerfile.dev  Dockerfile.latest
dockerfiles/: latest
docs/: .readthedocs.yaml  Makefile  README.md  conf.py  conftest.py  conversion_gallery.rst  developer_guide.rst  generating_example_dataset.rst  generating_example_file.rst  index.rst  tutorial_1.rst  tutorials.rst  user_guide.rst
docs/_ext/: tsv_directive.py
docs/_static/: cookie-consent.css  cookie-consent.js  custom.css  ga-consent-init.js
docs/api/: index.rst  nwb2bids.rst
docs/expected_files/: dataset_description.json  participants.json  participants.tsv  sub-001_ses-A_channels.tsv  sub-001_ses-A_ecephys.nwb  sub-001_ses-A_electrodes.tsv  sub-001_ses-A_probes.tsv  sub-001_ses-a_ecephys.json  sub-001_sessions.json  sub-001_sessions.tsv
docs/source/: conf.py
docs/source/api/: bids_models.rst  index.rst  testing.rst
nwb2bids/: __init__.py  _additional_metadata_schema.py  base.py  cli.py  conftest.py  reformat.py
nwb2bids/test/: test_base.py  test_events.py  test_reformat.py
pr-101/: objects.inv
pr-101/.doctrees/: environment.pickle
pr-102/: search.html
pr-102/.doctrees/: environment.pickle
pr-102/.doctrees/api/: bids_models.doctree  testing.doctree
pr-70/: index.html  py-modindex.html  search.html
pr-70/.doctrees/: environment.pickle
pr-70/.doctrees/api/: bids_models.doctree
pr-70/_sources/: index.rst.txt
pr-70/api/: bids_models.html  index.html
pr-88/.doctrees/: environment.pickle
pr-96/.doctrees/: environment.pickle
pr-97/.doctrees/: environment.pickle  index.doctree
pr-99/: objects.inv  searchindex.js
pr-99/.doctrees/: environment.pickle
pr-99/.doctrees/api/: bids_models.doctree
pr-99/_sources/api/: testing.rst.txt
pr-99/api/: bids_models.html
src/nwb2bids/: __init__.py  _hidden_top_level_imports.py
src/nwb2bids/_base/: __init__.py  _additional_metadata.py  _base_converter.py  _convert_nwb_dataset.py  _dataset_converter.py  _ecephys_utils.py  _events.py  _events_utils.py  _handle_file_mode.py  _loading.py  _reposit.py  _session_converter.py  _utils.py  _write_info.py  _writing.py
src/nwb2bids/_command_line_interface/: _main.py
src/nwb2bids/_converters/: _base_converter.py  _dandi_utils.py  _datalad_utils.py  _dataset_converter.py  _handle_file_mode.py  _run_config.py  _session_converter.py
src/nwb2bids/_core/: _convert_nwb_dataset.py  _file_mode.py  _global_config.py  _home.py  _run_id.py  _validate_existing_bids.py
src/nwb2bids/_inspection/: _inspection_message.py  _inspection_result.py  _json_encoder.py
src/nwb2bids/_messages/: _inspection_message.py
src/nwb2bids/_tools/: __init__.py  _cache_nwb.py  _main.py  _pluralize.py  _probeinterface.py
src/nwb2bids/bids_models/: __init__.py  _base_metadata_model.py  _bids_dataset_metadata.py  _bids_microephys_session_metadata.py  _bids_session_metadata.py  _channels.py  _coordinate_system.py  _coordinate_system_data.json  _dataset_description.py  _electrodes.py  _events.py  _general_metadata.py  _model_globals.py  _model_utils.py  _participant.py  _probes.py
src/nwb2bids/models/: __init__.py  _bids_dataset_metadata.py  _bids_session_metadata.py
src/nwb2bids/notifications/: __init__.py  _definitions.py  _notification.py  _notification_summary.py  _registry.py  _types.py
src/nwb2bids/sanitization/: __init__.py  _common.py  _configuration.py  _levels.py  _participant.py  _sanitization.py  _session.py
src/nwb2bids/schemas/: __init__.py  _additional_metadata_schema.py  _bids_dataset_metadata.py  _bids_session_metadata.py
test/: conftest.py  test_base.py  test_events.py
tests/: conftest.py  test_base.py  test_dataset_converter.py  test_events.py  test_session_converter.py
tests/cli/: conftest.py  test_cli.py  test_cli_errors.py  test_cli_messages.py  test_sanitization_cli.py
tests/convert_nwb_dataset/: test_cli.py  test_cli_messages.py  test_convert_nwb_dataset.py  test_edge_cases.py  test_events.py  test_sanitization_cli.py
tests/integration/: test_conversion_with_sanitization.py  test_convert_nwb_dataset.py  test_edge_cases.py  test_events.py  test_icephys_tutorial.py  test_messages.py  test_ndx_events.py  test_notification_dump_integration.py  test_notifications.py  test_remote_convert_nwb_dataset.py  test_sanitization.py  test_session_label_logic.py
tests/unit/: test_dandi_utils.py  test_dataset_converter.py  test_directory_conditions.py  test_global_config.py  test_json.py  test_notification_dump.py  test_notification_initialization.py  test_notification_summary.py  test_progress_bar.py  test_remote_dataset_converter.py  test_run_config.py  test_sanitization.py  test_session_converter.py  test_tutorial_helpers.py  test_utils.py
(+21 files in other folders)
