[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/nwb2bids"]

[tool.hatch.envs.default]
installer = "uv"
python = "3.10"

# Execute `hatch env create test` to create all test environments.
# Use `+` and `-` to select tests environments to run tests if needed
# as documented in https://hatch.pypa.io/latest/cli/reference/#hatch-run.
[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]
feature = ["none", "dandi", "all"]
cov = ["off", "on"]
[tool.hatch.envs.test.overrides]
matrix.feature.features = [
  { value = "dandi", if = ["dandi"] },
  { value = "all", if = ["all"] },
]
matrix.cov.dependency-groups = [
  { value = "test", if = ["off"] },
  { value = "coverage", if = ["on"] },
]
[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"

[tool.hatch.envs.dev]
features = ["all"]
dependency-groups = ["dev"]

[tool.hatch.envs.types]
features = ["all"]
dependency-groups = ["types"]

[tool.hatch.envs.types.scripts]
# Define named script for type checking
check = "mypy --install-types --non-interactive {args:src/nwb2bids tests}"
check-no-module-cache = "mypy --no-incremental {args:src/nwb2bids tests}"

[tool.hatch.envs.all]
features = ["all"]
dependency-groups = ["dev-all"]



[project]
name = "nwb2bids"
authors = [
  { name="Cody Baker", email="cody.c.baker.phd@gmail.com" },
]
description = "Reorganize NWB files into a BIDS directory layout."
readme = "README.md"
keywords = [
    "data standards",
    "data organization",
    "BIDS",
    "Brain Imaging Data Structure",
    "NWB",
    "NeurodataWithoutBorders",
    "DANDI Archive",
    "neurodata",
    "neuroscience",
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pynwb",
    "rich-click",
    "pydantic",
    "typing-extensions",  # TODO: remove when dropping support for Python 3.10
    "ruamel.yaml~=0.18.15",  # https://sourceforge.net/p/ruamel-yaml-clib/tickets/47/
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

[project.optional-dependencies]
dandi = [
    "dandi",
    "remfile",
]
all = [
    "nwb2bids[dandi]",
]

[project.urls]
Repository = "https://github.com/con/nwb2bids/"
Issues = "https://github.com/con/nwb2bids/issues"
Changelog = "https://github.com/con/nwb2bids/blob/main/CHANGELOG.md"

[project.scripts]
nwb2bids = "nwb2bids._command_line_interface._main:_nwb2bids_cli"

[dependency-groups]
type-stubs = ["pandas-stubs"]
test = ["pytest", "datalad", "git-annex", "sybil"]
coverage = [{include-group = "test"}, "pytest-cov"]
dev = [{include-group = "type-stubs"}, {include-group = "test"}, "ipython", "pre-commit"]
types = [{include-group = "type-stubs"}, {include-group = "test"}, "mypy"]
docs = [
    "sphinx<9.0.0",
    "sphinx-tabs",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-toggleprompt",
    "myst-parser",
    "pytest",  # For running doc tests
    "sybil",  # For testing code blocks in docs
]
dev-all = [
    {include-group = "type-stubs"},
    {include-group = "test"},
    {include-group = "coverage"},
    {include-group = "dev"},
    {include-group = "types"},
    {include-group = "docs"},
]


[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
plugins = ["pydantic.mypy"]
disable_error_code = ["prop-decorator"]

[[tool.mypy.overrides]]
module = [
  "dandi.*",
  "datalad.*",
  "h5py",
  "py.*",
  "pynwb.*",
  "remfile",
]
ignore_missing_imports = true

# === Temporary mypy ignores for selected files ===
[[tool.mypy.overrides]]
module = ["*._probes"]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = ["*._electrodes"]
disable_error_code = ["override", "union-attr"]

[[tool.mypy.overrides]]
module = ["nwb2bids.bids_models._channels"]
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = ["nwb2bids.bids_models._bids_session_metadata"]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = ["nwb2bids._converters._session_converter"]
disable_error_code = ["call-arg", "union-attr"]

[[tool.mypy.overrides]]
module = ["nwb2bids._converters._dataset_converter"]
disable_error_code = ["call-arg", "union-attr", "func-returns-value"]

[[tool.mypy.overrides]]
module = ["nwb2bids._core._convert_nwb_dataset"]
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = ["nwb2bids._command_line_interface._main"]
disable_error_code = ["assignment", "arg-type"]

[[tool.mypy.overrides]]
module = ["conftest"]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = ["test_utils"]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = ["test_session_converter"]
disable_error_code = ["call-arg", "arg-type"]

[[tool.mypy.overrides]]
module = ["test_run_config"]
disable_error_code = ["call-arg", "misc"]

[[tool.mypy.overrides]]
module = ["test_remote_dataset_converter"]
disable_error_code = ["call-arg", "union-attr"]

[[tool.mypy.overrides]]
module = ["test_directory_conditions"]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = ["test_dataset_converter"]
disable_error_code = ["call-arg", "arg-type"]

[[tool.mypy.overrides]]
module = ["test_remote_convert_nwb_dataset"]
disable_error_code = ["call-arg", "union-attr", "arg-type"]

[[tool.mypy.overrides]]
module = ["test_notifications"]
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = ["test_icephys_tutorial"]
disable_error_code = ["call-arg", "arg-type"]

[[tool.mypy.overrides]]
module = ["test_events"]
disable_error_code = ["call-arg", "arg-type"]

[[tool.mypy.overrides]]
module = ["test_edge_cases"]
disable_error_code = ["call-arg", "arg-type"]

[[tool.mypy.overrides]]
module = ["test_convert_nwb_dataset"]
disable_error_code = ["call-arg", "arg-type", "var-annotated"]

[[tool.mypy.overrides]]
module = ["test_conversion_with_sanitization"]
disable_error_code = ["call-arg", "arg-type"]

[[tool.mypy.overrides]]
module = ["test_sanitization_cli"]
disable_error_code = ["str-bytes-safe", "arg-type"]

[[tool.mypy.overrides]]
module = ["test_cli"]
disable_error_code = ["str-bytes-safe", "arg-type"]

# === Temporary mypy ignores for selected files section ends ===

[tool.ruff]
exclude = [
  "*/__init__.py"
]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = [
    "PTH123",
    "D203",
    "D212",
    "T201",
    "FIX002",
    "TD003",
    "TD002",
    "S101",
    "ICN001",
    "INP001",
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["nwb2bids"]

[tool.ruff.lint.per-file-ignores]
"src/nwb2bids/_hidden_top_level_imports.py" = ["F401"]  # Must perform imports here even if not exposed



[tool.pytest.ini_options]
markers = [
    "remote: mark a test as requiring remote resources",
    "container_cli_test: mark a test as suitable for container CLI testing",
]
addopts = "-ra"
testpaths = ["tests"]
doctest_optionflags = "ELLIPSIS"
