[metadata]
name = nwb2bids
# PIP has issues with setuptools_scm
#version = attr: setuptools_scm.get_version
version = 0.0.1
url = https://github.com/con/nwb2bids
author = nwb2bids developers
description = Organize NWB data into BIDS directories
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
install_requires =
    pynwb
# This doesn't work for some reason:
packages = find:
#packages = nwb2bids
include_package_data = false
zip_safe = false

# PIP has issues with setuptools_scm
#[build-system]
#requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"
